[package]
name = "noiton"
version = "0.1.3"
edition = "2021"
authors = ["K8sCat <rustpanic@gmail.com>"]
description = "Notion API in Rust"
license = "MIT"
repository = "https://github.com/k8scat/noiton"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
anyhow = "1.0.51"
